# SFML-tutorial-game

./: CMakeLists.txt  Game.cpp  Game.h  GameBall.cpp  GameBall.h  GameObjectManager.cpp  GameObjectManager.h  MainMenu.cpp  MainMenu.h  PlayerPaddle.cpp  PlayerPaddle.h  README.md  SplashScreen.cpp  VisibleGameObject.cpp  VisibleGameObject.h  game.cpp  game.h  main.cpp
